auth-page: fix image distortion on error display

--- a/frontEnd/pfp_front/styles/layout_css/auth_layout.module.css
+++ b/frontEnd/pfp_front/styles/layout_css/auth_layout.module.css
@@ -1,5 +1,5 @@
 .auth_container{
-  min-height: 100vh;
+  height: fit-content;
   max-width: 718px;
   border-top-right-radius: 90px;
   border-bottom-right-radius: 90px;
@@ -8,6 +8,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  flex-grow: 1;
 }
 
 .body_background{
@@ -15,7 +16,7 @@
   background-repeat:no-repeat;
   background-size:cover;
   display: flex;
-  height: 100%;
+  height: 100vh;
   flex-direction: column;
   overflow: scroll;
 }
@@ -33,7 +34,6 @@
 
 @media (max-width:1440px) {
   .auth_container{
-  min-height: 100vh;
   max-width: 490px;
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
@@ -43,7 +43,6 @@
 
 @media (max-width:720px) {
   .auth_container{
-  min-height: 100vh;
   max-width: none;
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
